card flip working, fixing img spacing

--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@ ul:hover a:hover ~ a:before {
   margin: 0 0 7rem;
   position: relative;
   max-width: 100%;
+  max-height: 100%;
   display: flex;
   flex-flow: row wrap;
   /* transition: all .2s ease-in-out; */
@@ -167,7 +168,6 @@ ul:hover a:hover ~ a:before {
 .imgWrap {
   height: 100%;
   width: 100%;
-
   /* transform: scale(1); */
   /* transition: all .5 ease; */
   /* filter: grayscale(50%); */
